# spark-bigtable-data-source

./: .gitignore  AGENTS.md  NOTICE  README.md  databricks.yml  env.example  examples.ipynb  login.sh  populate-table.ipynb  pyproject.toml  pytest.ini  stream-demo.ipynb  sync.sh
.github/workflows/: onpush.yml
notebooks/: examples.ipynb  populate-table.ipynb  stream-demo.ipynb
scripts/: setup-bigtable-demo.sh
src/bigtable_data_source/: __init__.py  data_source.py  mutation_types.py  partitioning.py  schema.py  stream_reader.py
src/bigtable_stateful_processor/: __init__.py  processor.py  schema.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: bigtable_integration_utils.py  conftest.py  test_bigtable_integration.py  test_bigtable_integration_utils.py  test_bigtable_stateful_processor.py  test_data_source.py  test_partitioning.py  test_schema.py  test_stream_reader.py
